# Ushuaia

./: .gitignore  CMakeLists.txt  export_compileCmd.sh  predef.props
helper/: compile_shaders.py  export_compileCmd.sh  gather_res_desc.py  make.sh  state_codec.py  trimMake.py  trimVC.py
shaders/: annotations.json  clay.def  compile_all.py  compile_all.sh  exam.def.sc  fog.sh  forward_rendering.sh  fs_clay.sc  fs_combine.sc  fs_dir_light.sc  fs_exam.sc  fs_lighting.sc  fs_linear_depth.sc  fs_point_light.sc  fs_shading.sc  fs_tex.sc  fxc.py  fxc.sh  light.sh  pbr_lighting.sh  pos_tc0.def  screen_quad.def  tc1.def  util.sh  varying.predef  vs_clay.sc  vs_clay_instance.sc  vs_exam.sc  vs_exam_instance.sc  vs_point_light.sc  vs_screen_geo.sc  vs_screen_quad.sc  vs_tex.sc
shaders/lighting/: forward_rendering.sh  fs_dir_light.sc  fs_shading.sc  pbr_lighting.sh
shaders/material/: fs_clay.sc  fs_tex.sc  tex.def  vs_clay_instance.sc
shaders/screen/: combine_fs.sc  copy_fs.sc  fs_copy.sc  fs_down_quater.sc  linear_depth_fs.sc  screen_quad_vs.sc  vs_down_quater.sc  vs_screen_geo.sc  vs_tone_mapping.sc
shaders/screen/HDR/: fs_bright.sc  fs_glow_merger.sc  fs_sum_lum.sc  fs_sum_lum_iterative.sc  fs_tone_mapping.sc  sum_lum_fs.sc  vs_tone_mapping.sc
shaders/screen/SeparableBlur/: fs_gaussian_blur_x.sc  fs_gaussian_blur_y.sc  vs_gaussian_blur_x.sc
src/: Blur.cpp  Blur.h  Camera.cpp  Camera.h  Color.h  ConfDef.cpp  DrawItem.cpp  DrawItem.h  Entity.h  ForwardRendering.cpp  ForwardRendering.h  HDR.cpp  Light.cpp  Light.h  Material.cpp  Math.h  Math.inl  Mesh.cpp  Mesh.h  Model.h  RenderHelper.cpp  RenderUtil.cpp  RenderUtil.h  Scene.h  Script.cpp  Script.h  Serialize.cpp  Serialize.h  Shader.h  Shading.cpp  Shading.h  ViewState.h  VtxDecl.cpp  VtxDecl.h  Workflow.cpp  Workflow.h  appConf.h  appEntry.cpp  blur.cpp  blur.h  (+58 more)
